# phantom

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml  teste  utils.txt  webpack.config.js
client/: package.json
client/src/: extension.ts
crates/libs/phantom-config/: Cargo.toml
crates/libs/phantom-config/src/: lib.rs
crates/libs/phantom-core/: Cargo.toml
crates/libs/phantom-core/src/: lib.rs  rich.rs  token.rs
crates/libs/phantom-formatter/: Cargo.toml
crates/libs/phantom-formatter/src/: lib.rs
crates/libs/phantom-linter/: Cargo.toml
crates/libs/phantom-linter/src/: factory.rs  lib.rs
crates/libs/phantom-linter/src/validates/: class_member_order.rs  disallow_debug_functions.rs  enforce_namespace.rs  line_length.rs  mod.rs  single_class_per_file.rs
crates/libs/phantom-logger/: Cargo.toml
crates/libs/phantom-logger/src/: lib.rs
crates/libs/phantom-parser/: Cargo.toml
crates/libs/phantom-parser/src/: _err.rs  config.rs  err.rs  factory.rs  lib.rs
crates/libs/phantom-parser/src/err/: mod.rs  rich.rs
crates/libs/phantom-parser/src/grammars/: php.pest
crates/libs/phantom-parser/src/validates/: class_member_order.rs  disallow_debug_functions.rs  enforce_namespace.rs  line_length.rs  mod.rs  single_class_per_file.rs
crates/phantom-cli/: Cargo.toml
crates/phantom-cli/src/: main.rs
crates/phantom-server/: Cargo.toml
crates/phantom-server/src/: main.rs
examples/: .phantomrc  .phantomrc copy  com_erros.php  index.php  index.rs  sem_erros.php
src/: chumsky.rs  lib.rs  lsp.rs  main.rs  semantic_token.rs  teste.rs
tests/: chumsky.rs
