[workspace]
resolver = "2"
members = ["crates/phantom-cli", "crates/libs/phantom-parser"]

default-members = ["crates/phantom-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
categories = ["development-tools"]
keywords   = ["parser", "linter", "formatter"]
rust-version = "1.70"

# [dependencies]
# chumsky = "0.9.0"
# env_logger = "0.9.0"
# ropey = "1.5.0"
# serde_json = "1.0.78"
# tokio = { version = "1.17.0", features = ["full"] }
# tower-lsp = { version = "0.20.0", features = ["proposed"]}
# serde = { version = "1.0", features = ["derive"] }
# dashmap = "5.1.0"
# log = "0.4.14"
# im-rc = "15.0.0"