[package]
name = "phantom-cli"
description = "Phantom command line interface"
version.workspace = true
edition.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# My libs
phantom-parser = { path = "../libs/phantom-parser", package = "phantom-parser" }
phantom-config = { path = "../libs/phantom-config", package = "phantom-config" }

clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.0"
crossterm = "0.28.1"
dialoguer = "0.11.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
