[package]
name = "phantom-server"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
phantom-parser = { path = "../libs/phantom-parser", package = "phantom-parser" }
phantom-logger = { path = "../libs/phantom-logger", package = "phantom-logger" }

# chumsky = "0.9.0"
env_logger = "0.9.0"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.1.0"
log = "0.4.14"
im-rc = "15.0.0"

pest = "2.7.11"
