[package]
name = "phantom-linter"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
phantom-config = { path = "../phantom-config", package = "phantom-config" }
phantom-core = { path = "../phantom-core", package = "phantom-core" }


itertools = "0.10"