[package]
name = "phantom-parser"
version.workspace = true
edition.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"
anyhow = "1.0"