[package]
name = "phantom-parser"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky.git", branch = "main" }
logos = "0.15.0"
itertools = "0.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
